# robot-navigation

./: .gitignore  README.md  a_star.sh  center.sh  classic.sh  gazebo.sh  localization.sh  rl.sh  run.sh
src/a_star_planner/: package.xml  setup.py
src/a_star_planner/a_star_planner/: a_star_planner_node.py
src/gazebo_rl/: package.xml  setup.cfg  setup.py
src/gazebo_rl/gazebo_rl/: gazebo_env.py  smoke_test.py
src/interface_srvices/: CMakeLists.txt  package.xml
src/interface_srvices/srv/: PlanPath.srv
src/localization/: package.xml  setup.py
src/localization/launch/: localization.launch.py
src/localization/localization/: a_star_planner_node.py  ekf.py  ekf_node.py  initinal_pos.py  measurement.py  measurement_node.py  prediction.py  prediction_node.py
src/path_following_controller/: package.xml  setup.cfg  setup.py
src/path_following_controller/path_following_controller/: mpc_path_follower.py  pid_path_follower.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: amcl.yaml  config.rviz  gz_bridge.yaml
src/robot_description/launch/: gazebo.launch.py
src/robot_description/scripts/: cmd_vel.cpp  ekf_diff_imu.cpp  frame_id_converter.cpp  motor_command.cpp
src/robot_description/src/description/: robot.urdf
src/robot_description/src/meshes/: Front_Left_Caster_Wheel_Main.STL  Front_Right_Caster_Wheel_Main.STL  Rear_Left_Caster_Wheel_Main.STL  Rear_Right_Caster_Wheel_Main.STL  Rear_Trailing.STL  wheel.STL  wheel.usd  zed.STL
src/robot_description/world/: depot.sdf
